--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Kenaros\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\netma\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
